# Rafale

./: .gitignore  CMakeLists.txt  README.md  rafale.sublime-project
controller_generator/include/: generator.hh
controller_generator/src/: main.cc
example/: .gitignore  CMakeLists.txt  beta.sh  config.cc  local.sh  main.cc  rafale-build.sh  rafale-spawn.sh  release.sh  test.sh
example/config/: vhost.nginx.sample.conf
example/controllers/: Default.hh  Layout.hh  Test.hh  default.hh  test.hh
example/htdocs/css/: forms.css
example/htdocs/js/: forms.js
example/layouts/: Layout.cchtml
example/misc/nginx-conf/: mywebsite
example/models/: country.cc  country.hh
example/project/: config.cc
example/project/controllers/: Default.hh  Forms.hh  Users.hh  test.hh
example/project/layouts/: Layout.cchtml
example/project/models/: Form.cc  Form.hh  FormElement.cc  FormElement.hh  FormValidators.cc  FormValidators.hh  Tools.hh  User.cc  User.hh  country.cc
example/project/views/Forms/: Main.cchtml
example/project/views/Users/: Main.cchtml
example/project/views/test/: upload.cchtml
example/views/: Default.view  Layout.view  Test.view
example/views/Default/: .default.cc  Main.cchtml  Test.cchtml
example/views/default/: default.cchtml
generator/: CMakeLists.txt
generator/include/: cchtml_generator.hh  controller_generator.hh  generator.h  layout_generator.hh  model_generator.hh  view_generator.hh
generator/include/r0x/system/: directory.h
generator/src/: main.cc
include/: abstract.h  config.hh  controller.hh  cookies.hh  dispatcher.hh  file.hh  layout.hh  model.hh  rafale.h  sessions.hh  sql.hh  tools.hh  view.hh
include/r0x/system/: file.h
include/rafale/: abstract.hh  client.hh  config.hh  controller.hh  controller_static_members_policy.hh  cookies.hh  curl.hh  depends.hh  dispatcher.hh  environment.hh  extern.hh  fcgi.hh  file.hh  mail.hh  model.hh  server.hh  sessions.hh  sql.hh  tools.hh
include/rafale/controllers/: 404.hh
include/rafale/plugin/: paypal.hh
include/rafale/r0x/system/: directory.h
include/rafale/sql/: data.hh  query.hh  tools.hh
include/sql/: data.hh  query.hh  tools.hh
misc/: FindRafale.cmake
rafale-view/: CMakeLists.txt
rafale-view/include/: data.h  options.h  view.h
rafale-view/include/data_/: cplusplus.inc  eval.inc  raw.inc
rafale-view/include/r0x/system/: file.h
rafale-view/src/: data.cc  main.cc  options.cc
src/: client.cc  controller.cc  curl.cc  environment.cc  mail.cc  raw_main.cc  server.cc  sessions.cc  tools.cc
src/plugin/: paypal.cc
view_generator/include/: generator.hh
view_generator/src/: main.cc
